# CT-10-Emulator

./: .gitignore  CMakeLists.txt  README.md
Docs/Architecture/: ARCHITECTURE.md  BUS_WAVEFORM_EXAMPLE.md  CMAKE_SKELETON.md  CT10_Emulator_PRD.md  GOLDEN_LAB_PROGRAM_TRACES.md  INSTRUCTION_MICROOPS.md  MICROCODE_DEFINITION.md  PANEL_COORDINATE_MAP.md  PER_INSTRUCTION_TIMING_TABLE.md  SIGNAL_GLOSSARY_ENUM_MAP.md  SIGNAL_GLOSSARY_ENUM_MAP_FULL.md  TIMING_MODEL.md
Docs/Historical/: KDA-3032_Digiac_COM-TRAN_TEN_Training_Jun81 ct10 ct-10.txt
scripts/: build.sh  test_io.sh
src/app/: golden_program.cpp  golden_program.h  headless_main.cpp  main.cpp  main_loop.cpp  main_loop.h  mode_controller.cpp  mode_controller.h  program_text.h  tape_io.cpp  tape_io.h
src/core/: bus.cpp  bus.h  execution_engine.cpp  execution_engine.h  instruction_decoder.cpp  instruction_decoder.h  machine_state.cpp  machine_state.h  memory.cpp  memory.h  microcode.h  microcode_table.cpp  microcode_table.h  panel_input.h  register.cpp  register.h  signals.h  state_io.cpp  state_io.h  timing_engine.cpp  timing_engine.h
src/ui/: debug_pane.cpp  debug_pane.h  imgui_app.cpp  imgui_app.h  panel_layout.h  panel_view.cpp  panel_view.h
tests/expected/: printer_output.hex  terminal_output.hex
tests/programs/: add_two_numbers.txt  branch_bze.txt  div_two_numbers.txt  indexed_load.txt  io_printer_output.txt  io_term_printer.txt  io_terminal_input.txt  io_terminal_output.txt  mul_two_numbers.txt  shift_sla.txt  shift_sll_srl.txt  shift_sra.txt  skip_if_flag.txt  sub_two_numbers.txt  test.txt  test_asm.txt
